task: adding auth handling

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@capacitor/cli": "^7.4.2",
         "@capacitor/core": "^7.4.2",
+        "@directus/sdk": "^18.0.3",
         "@hookform/resolvers": "^3.9.0",
         "@radix-ui/react-accordion": "^1.2.0",
         "@radix-ui/react-alert-dialog": "^1.1.1",
